add conditional retrieval service